# blazingly_fast_url_shortener

./: Cargo.toml  Dockerfile  LICENSE  README.md  identifier.sqlite  url_shortener.db
migrations/: 20250202134057_create_urls_table.sql  20250203170147_add_data.sql
src/: config.rs  database.rs  handlers.rs  hash.rs  main.rs  models.rs  routes.rs  validation.rs
static/: index.html
