[package]
name = "blazingly_fast_url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.8"
sqlx = {version = "0.8", features = ["sqlite", "runtime-tokio"]}
tokio = {version = "1", features = ["full"]}
async-trait = "0.1.51"
qrcode = "0.14"
image= "0.25"
dotenv = "0.15.0"

log = { version = "0.4.25", features = [] }
env_logger = "0.11.6"