[package]
name = "blazingly_fast_url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
async-trait = "0.1.51"
url = "2.5.4"
tokio = {version = "1", features = ["full"]}

serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1.11.1"
chrono = "0.4.39"

sqlx = {version = "0.8", features = ["sqlite", "runtime-tokio"]}

dotenv = "0.15.0"
env_logger = "0.11.6"
log = { version = "0.4.25", features = [] }